tests/errors/redefined-variable.ink
// @test error

fn main() : int
{
	int x = 3;
	int x = 4;
	return x;
}